egg-grammar/tests/snapshots/token_scan__hello_world.snap
---
source: egg-grammar/tests/token_scan.rs
expression: tokens
---
[
    TokenLine {
        ln_text: "@cli::entry",
        indent: TokenLineItem {
            src_text: "",
            token: IndentToken [],
        },
        middle: [
            TokenLineItem {
                src_text: "@",
                token: Ok(
                    Operator(
                        OperatorToken(
                            "@",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "cli",
                token: Ok(
                    Word(
                        Identifier(
                            "cli",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "::",
                token: Ok(
                    Operator(
                        OperatorToken(
                            "::",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "entry",
                token: Ok(
                    Word(
                        Identifier(
                            "entry",
                        ),
                    ),
                ),
            },
        ],
        ending: None,
    },
    TokenLine {
        ln_text: "fn main() do",
        indent: TokenLineItem {
            src_text: "",
            token: IndentToken [],
        },
        middle: [
            TokenLineItem {
                src_text: "fn",
                token: Ok(
                    Word(
                        Keyword(
                            Fn,
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "main",
                token: Ok(
                    Word(
                        Identifier(
                            "main",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "(",
                token: Ok(
                    Bracket(
                        BracketToken {
                            direction: Open,
                            shape: Round,
                        },
                    ),
                ),
            },
            TokenLineItem {
                src_text: ")",
                token: Ok(
                    Bracket(
                        BracketToken {
                            direction: Close,
                            shape: Round,
                        },
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "do",
                token: Ok(
                    Word(
                        Keyword(
                            Do,
                        ),
                    ),
                ),
            },
        ],
        ending: None,
    },
    TokenLine {
        ln_text: "    println(\"Hello, World!\")",
        indent: TokenLineItem {
            src_text: "    ",
            token: IndentToken [<SPC✕4>],
        },
        middle: [
            TokenLineItem {
                src_text: "println",
                token: Ok(
                    Word(
                        Identifier(
                            "println",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "(",
                token: Ok(
                    Bracket(
                        BracketToken {
                            direction: Open,
                            shape: Round,
                        },
                    ),
                ),
            },
            TokenLineItem {
                src_text: "\"Hello, World!\"",
                token: Ok(
                    String(
                        StringToken {
                            prefix: "",
                            suffix: "",
                            body: "Hello, World!",
                            quote: Double,
                            error: None,
                        },
                    ),
                ),
            },
            TokenLineItem {
                src_text: ")",
                token: Ok(
                    Bracket(
                        BracketToken {
                            direction: Close,
                            shape: Round,
                        },
                    ),
                ),
            },
        ],
        ending: None,
    },
]
