egg-grammar/tests/snapshots/token_scan__invalid_char_heart.snap
---
source: egg-grammar/tests/token_scan.rs
expression: tokens
---
[
    TokenLine {
        ln_text: "print 'hello world' with ❤\u{fe0f}",
        indent: TokenLineItem {
            src_text: "",
            token: IndentToken [],
        },
        middle: [
            TokenLineItem {
                src_text: "print",
                token: Ok(
                    Word(
                        Identifier(
                            "print",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "'hello world'",
                token: Ok(
                    String(
                        StringToken {
                            prefix: "",
                            suffix: "",
                            body: "hello world",
                            quote: Single,
                            error: None,
                        },
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "with",
                token: Ok(
                    Word(
                        Keyword(
                            With,
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "❤",
                token: Err(
                    InvalidToken(
                        '❤',
                    ),
                ),
            },
            TokenLineItem {
                src_text: "\u{fe0f}",
                token: Err(
                    InvalidToken(
                        '\u{fe0f}',
                    ),
                ),
            },
        ],
        ending: None,
    },
]
