egg-grammar/tests/snapshots/token_scan__multi_line.snap
---
source: egg-grammar/tests/token_scan.rs
expression: tokens
---
[
    TokenLine {
        ln_text: "@@desc Simple hello world text.",
        indent: TokenLineItem {
            src_text: "",
            token: IndentToken [],
        },
        middle: [],
        ending: Some(
            TokenLineItem {
                src_text: (
                    "@@desc Simple hello world text.",
                    [],
                ),
                token: Doc(
                    EmbedToken {
                        header: (
                            DocTokenTag(
                                Some(
                                    Identifier(
                                        "desc",
                                    ),
                                ),
                            ),
                            RawToken(
                                " Simple hello world text.",
                            ),
                        ),
                        body: [],
                    },
                ),
            },
        ),
    },
    TokenLine {
        ln_text: "pub const HELLO_WORLD: str = '''",
        indent: TokenLineItem {
            src_text: "",
            token: IndentToken [],
        },
        middle: [
            TokenLineItem {
                src_text: "pub",
                token: Ok(
                    Word(
                        Keyword(
                            Pub,
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "const",
                token: Ok(
                    Word(
                        Keyword(
                            Const,
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "HELLO_WORLD",
                token: Ok(
                    Word(
                        Identifier(
                            "HELLO_WORLD",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: ":",
                token: Ok(
                    Operator(
                        OperatorToken(
                            ":",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "str",
                token: Ok(
                    Word(
                        Keyword(
                            Str,
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "=",
                token: Ok(
                    Operator(
                        OperatorToken(
                            "=",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
        ],
        ending: Some(
            TokenLineItem {
                src_text: (
                    "'''",
                    [
                        "    Hello, World!",
                        "",
                    ],
                ),
                token: Text(
                    EmbedToken {
                        header: (
                            Single,
                            RawToken(
                                "",
                            ),
                        ),
                        body: [
                            RawToken(
                                "Hello, World!",
                            ),
                            RawToken(
                                "",
                            ),
                        ],
                    },
                ),
            },
        ),
    },
    TokenLine {
        ln_text: "@@desc Example YAML text.",
        indent: TokenLineItem {
            src_text: "",
            token: IndentToken [],
        },
        middle: [],
        ending: Some(
            TokenLineItem {
                src_text: (
                    "@@desc Example YAML text.",
                    [],
                ),
                token: Doc(
                    EmbedToken {
                        header: (
                            DocTokenTag(
                                Some(
                                    Identifier(
                                        "desc",
                                    ),
                                ),
                            ),
                            RawToken(
                                " Example YAML text.",
                            ),
                        ),
                        body: [],
                    },
                ),
            },
        ),
    },
    TokenLine {
        ln_text: "pub const CONFIG: str = '''yaml",
        indent: TokenLineItem {
            src_text: "",
            token: IndentToken [],
        },
        middle: [
            TokenLineItem {
                src_text: "pub",
                token: Ok(
                    Word(
                        Keyword(
                            Pub,
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "const",
                token: Ok(
                    Word(
                        Keyword(
                            Const,
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "CONFIG",
                token: Ok(
                    Word(
                        Identifier(
                            "CONFIG",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: ":",
                token: Ok(
                    Operator(
                        OperatorToken(
                            ":",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "str",
                token: Ok(
                    Word(
                        Keyword(
                            Str,
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "=",
                token: Ok(
                    Operator(
                        OperatorToken(
                            "=",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
        ],
        ending: Some(
            TokenLineItem {
                src_text: (
                    "'''yaml",
                    [
                        "    title: This is some YAML",
                        "    publisher: The name of the publisher",
                        "    pages: 335",
                        "    chapters: 12",
                        "    genres:",
                        "        - drama",
                        "        - tragedy",
                        "        - comedy",
                        "    contributors:",
                        "        author: Some guy",
                        "        editor: Some other guy",
                        "",
                    ],
                ),
                token: Text(
                    EmbedToken {
                        header: (
                            Single,
                            RawToken(
                                "yaml",
                            ),
                        ),
                        body: [
                            RawToken(
                                "title: This is some YAML",
                            ),
                            RawToken(
                                "publisher: The name of the publisher",
                            ),
                            RawToken(
                                "pages: 335",
                            ),
                            RawToken(
                                "chapters: 12",
                            ),
                            RawToken(
                                "genres:",
                            ),
                            RawToken(
                                "    - drama",
                            ),
                            RawToken(
                                "    - tragedy",
                            ),
                            RawToken(
                                "    - comedy",
                            ),
                            RawToken(
                                "contributors:",
                            ),
                            RawToken(
                                "    author: Some guy",
                            ),
                            RawToken(
                                "    editor: Some other guy",
                            ),
                            RawToken(
                                "",
                            ),
                        ],
                    },
                ),
            },
        ),
    },
    TokenLine {
        ln_text: "@@desc Example JavaScript text.",
        indent: TokenLineItem {
            src_text: "",
            token: IndentToken [],
        },
        middle: [],
        ending: Some(
            TokenLineItem {
                src_text: (
                    "@@desc Example JavaScript text.",
                    [],
                ),
                token: Doc(
                    EmbedToken {
                        header: (
                            DocTokenTag(
                                Some(
                                    Identifier(
                                        "desc",
                                    ),
                                ),
                            ),
                            RawToken(
                                " Example JavaScript text.",
                            ),
                        ),
                        body: [],
                    },
                ),
            },
        ),
    },
    TokenLine {
        ln_text: "pub const PROGRAM: str = '''js",
        indent: TokenLineItem {
            src_text: "",
            token: IndentToken [],
        },
        middle: [
            TokenLineItem {
                src_text: "pub",
                token: Ok(
                    Word(
                        Keyword(
                            Pub,
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "const",
                token: Ok(
                    Word(
                        Keyword(
                            Const,
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "PROGRAM",
                token: Ok(
                    Word(
                        Identifier(
                            "PROGRAM",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: ":",
                token: Ok(
                    Operator(
                        OperatorToken(
                            ":",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "str",
                token: Ok(
                    Word(
                        Keyword(
                            Str,
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: "=",
                token: Ok(
                    Operator(
                        OperatorToken(
                            "=",
                        ),
                    ),
                ),
            },
            TokenLineItem {
                src_text: " ",
                token: Ok(
                    Whitespace(
                        WhitespaceToken(
                            " ",
                        ),
                    ),
                ),
            },
        ],
        ending: Some(
            TokenLineItem {
                src_text: (
                    "'''js",
                    [
                        "    export function add(a, b) {",
                        "        return a + b",
                        "    }",
                    ],
                ),
                token: Text(
                    EmbedToken {
                        header: (
                            Single,
                            RawToken(
                                "js",
                            ),
                        ),
                        body: [
                            RawToken(
                                "export function add(a, b) {",
                            ),
                            RawToken(
                                "    return a + b",
                            ),
                            RawToken(
                                "}",
                            ),
                        ],
                    },
                ),
            },
        ),
    },
]
